<resources>
    <string name="app_name">Ai5adma</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Aykhaama</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="wholesale_cart">WholeSale Cart</string>
    <string name="shopping_favorite">Shopping Favorite</string>
    <string name="wholesale_favorite">WholeSale Favorite</string>
    <string name="product_add">product add to cart</string>
    <string name="product_already_add">product already in cart</string>
    <string name="product_deleted">product deleted from cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="my_order">My Order</string>
    <string name="my_favourite">My Favourite</string>
    <string name="my_shop_cart">My Shopping Cart</string>
    <string name="need_login">you need to login first</string>
    <string name="amount">amount is more than available</string>
    <string name="settings">Settings</string>
    <string name="filter_list">Filter List</string>
    <string name="shopping">Shopping</string>
    <string name="open_market">Open Market</string>
    <string name="wholesale">WholeSale</string>
    <string name="companies">Companies</string>
    <string name="videos">Videos</string>
    <string name="airlines">Airlines</string>
    <string name="hotels">Hotels</string>
    <string name="social_media">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="quantity">Quantity</string>
    <string name="contact_us">Contact us</string>
    <string name="customer_services">Customer Services</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_email_or_mobile">enter your email or mobile</string>
    <string name="re_send_pass">RESEND PASSWORD</string>
    <string name="email">email</string>
    <string name="country">country</string>
    <string name="card_number">card number</string>
    <string name="city">city</string>
    <string name="card_num">card number</string>
    <string name="sign_up_capital">SIGN UP</string>
    <string name="choose_card">choose card</string>
    <string name="choose_photo">choose /n photo</string>
    <string name="room">Room</string>
    <string name="select_room">select room</string>
    <string name="check_in">Check in</string>
    <string name="check_out">Check out</string>
    <string name="date_format">d/m/year </string>
    <string name="booking_now">Booking now</string>
    <string name="product_name">Product Name: </string>
    <string name="section">Section: </string>
    <string name="code">Code: </string>
    <string name="edit_profile">Edit Profile </string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="basic_info">Basic Info</string>
    <string name="new_pass">New Password</string>
    <string name="re_new_pass">Re-New Password</string>
    <string name="your_location">Your Location</string>
    <string name="loading">loading</string>
    <string name="failure_ws">failure</string>
    <string name="loading_proudct">Loading Proudct</string>
    <string name="dr">  دك   </string>
    <string name="complete_request">complete request</string>


    <string name="looking_for">what are you looking for ?</string>
    <string name="mobile">Mobile</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-Category</string>
    <string name="submit">Submit</string>
    <string name="kw">EUR</string>
    <string name="my_account">My Account</string>
    <string name="customer_service">Customer Service</string>
    <string name="resend_pass">RESEND PASSWORD</string>
    <string name="send_activate_code">Send Activate Code</string>
    <string name="forget_pass">Forget Password</string>
    <string name="activate_code">activate code</string>
    <string name="sign_out">Sign out</string>
    <string name="loading_search">searching....</string>
    <string name="confirm_call">do you want make a call ?</string>
    <string name="login_first">you need to login first to complete pay</string>
    <string name="login_first_title">you need to login</string>

    <string name="city_">city</string>
    <string name="mobile_">mobile number</string>
    <string name="sign_up_">SIGN UP</string>
    <string name="my_product">My Products</string>
    <string name="categories">Categories</string>
    <string name="offer">Offers</string>
    <string name="messages">Messages</string>
    <string name="add_product">add product</string>
    <string name="logo">Logo</string>
    <string name="sub_categories">Sub_Category</string>
    <string name="call_us">Call Us</string>
    <string name="send_email">Send Email</string>
    <string name="visit_site">visit site</string>
    <string name="type_message">type message ..</string>
    <string name="dialog">You need to login first</string>
    <string name="share">Share</string>
    <string name="start_date">Start Date</string>
    <string name="expire_date">Expire Date</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="choose_city">Choose City</string>
    <string name="all_city">All Cities</string>
    <string name="cancel">no</string>
    <string name="save">SAVE</string>
    <string name="success_login"> login successfully</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="cancel_low">no</string>
    <string name="yes">yes</string>
    <string name="search">Search Result</string>
    <string name="modify_product">Modify Product</string>
    <string name="remove_product">Remove Product</string>
    <string name="final_total">إجمالى الفاتورة</string>
    <string name="deliver">خدمة التوصيل</string>
    <string name="total">قيمة المشتريات</string>
    <string name="cancel_request">Home</string>
    <string name="inform_request">complete request </string>
    <string name="delete_cart_laoding">delete product from cart</string>
    <string name="dialog_yes"> yes </string>
    <string name="dialog_no"> no </string>
    <string name="dialog_sure">هل تريد تسجيل الخروج</string>
    <string name="dialog_buy"> طريقة الطلب </string>
    <string name="dialog_pay">way to pay</string>
    <string name="price_total"> يجب ان يزيد ثمن المشتريات عن 10 دنانير </string>
    <string name="cart_auth_request"> تسجيل الدخول</string>
    <string name="cart_without_auth_request">إكمال الطلب بدون تسجيل</string>
    <string name="add_cart">add to cart</string>
    <string name="send_forget">إرسال كلمة المرور</string>
    <string name="email_forget">البريد الإلكترونى</string>
    <string name="name">full name</string>
    <string name="pass">password</string>
    <string name="phone">mobile num</string>
    <string name="address">Country</string>
    <string name="region">Region</string>
    <string name="area">Area</string>
    <string name="avenue">Avenue</string>
    <string name="street">street</string>
    <string name="building_no">building no</string>

</resources>
