<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="match_parent">
<ImageView
    android:layout_width="wrap_content"
    android:src="@drawable/logo"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="35dp"
    android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="10dp"
        android:background="@drawable/red_profile"
        android:hint="@string/user_name"/>
    <EditText
        android:id="@+id/edPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:background="@drawable/red_profile"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/password"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <aykhadma.droidahmed.com.aykhaama.controller.MyTextView
        android:id="@+id/tvForgetPass"
        android:layout_width="wrap_content"
        android:textSize="18sp"
         android:textColor="@color/pink"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/forget_password"/>
        <aykhadma.droidahmed.com.aykhaama.controller.MyTextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/pink"
            android:layout_marginLeft="60dp"
            android:text="@string/sign_up"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:background="@drawable/buttons_corner"
        android:textColor="#fff"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
         android:layout_height="wrap_content"
        android:text="@string/sign_in"/>

</LinearLayout>