<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:padding="16dp"
    android:layout_height="match_parent">
<ImageView
    android:layout_width="220dp"
    android:src="@drawable/shoping_image"
    android:layout_gravity="center_horizontal"
    android:layout_height="220dp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/reBottom"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:background="@android:color/transparent"
        android:cacheColorHint="@android:color/transparent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#000"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">
<aykhadma.droidahmed.com.aykhaama.controller.MyTextView
    android:layout_width="wrap_content"
    android:text="@string/product_name"
    android:textSize="16sp"
    android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:text="Chicken strips"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_height="wrap_content">
    <aykhadma.droidahmed.com.aykhaama.controller.MyTextView
        android:layout_width="wrap_content"
        android:text="@string/section"
        android:textSize="16sp"
        android:layout_height="wrap_content" />
    <aykhadma.droidahmed.com.aykhaama.controller.MyTextView
        android:layout_width="wrap_content"
        android:text="Chicken"
        android:textSize="16sp"
        android:layout_marginLeft="15dp"
        android:layout_height="wrap_content" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <aykhadma.droidahmed.com.aykhaama.controller.MyTextView
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/code"
            android:layout_height="wrap_content" />
        <aykhadma.droidahmed.com.aykhaama.controller.MyTextView
            android:layout_width="wrap_content"
            android:text="055"
            android:textSize="16sp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>