<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/dark_red"
        android:layout_weight="3">
<ImageView
    android:layout_width="0dp"
    android:src="@drawable/back_icon"
    android:layout_height="wrap_content"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:layout_marginLeft="4dp"
    android:layout_weight="2"
    android:id="@+id/imgBack" />
        <aykhadma.droidahmed.com.aykhaama.controller.MyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:text="Sing In"
             android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textColor="#fff"
            android:layout_marginTop="18dp"
            android:layout_weight="6.5"

           />
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/cancel_icon"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1.6"
            android:id="@+id/imgCancel" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="11">





    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_marginTop="80dp"
        android:layout_weight="4">


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/edit_border"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"

            android:layout_height="40dp">
            <EditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/user_name"
                android:paddingLeft="15dp"
                android:layout_height="match_parent" />
        </RelativeLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="4">


        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/edit_border"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"

            android:layout_height="40dp">
            <EditText
                android:id="@+id/edPass"
                android:layout_width="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:layout_height="match_parent" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_weight="4">



            <aykhadma.droidahmed.com.aykhaama.controller.MyTextView

                android:id="@+id/tvForgetPass"
                android:layout_width="wrap_content"
                 android:text="@string/forget_pass"
                 android:paddingLeft="25dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                 android:textColor="@color/dark_red"
                android:layout_height="wrap_content" />
        <aykhadma.droidahmed.com.aykhaama.controller.MyTextView

            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
             android:text="@string/sign_up"
            android:layout_alignParentRight="true"
            android:paddingRight="35dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:textColor="@color/dark_red"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
         android:paddingLeft="35dp"
        android:paddingRight="35dp"

        android:layout_weight="2.8">



        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:text="@string/sign_in"
            android:textColor="#fff"
            android:textSize="16sp"
            android:background="@drawable/sign_in_bar"/>

    </LinearLayout>





 </LinearLayout>

</ScrollView>